Set up quick menu functionality (styling needed)

--- a/app/assets/styles/modules/_section.css
+++ b/app/assets/styles/modules/_section.css
@@ -1,6 +1,6 @@
 .section {  
     padding-top: 80px; /* General sections for all pages */
-
+    overflow: hidden;
     &__banner {
         text-align: center;
         @mixin atMedium {
