--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -73,7 +73,7 @@
         position: relative; 
         width: 100%;
         height: 100%;
-        border: 1px solid #fff;
+        /* border: 1px solid #fff; */
     }
 
     &__content {
@@ -301,4 +301,36 @@
         }
     }
 
+}
+
+
+
+
+    /* Quick Nav Variation */
+
+
+.overlay-nav--quick-nav {
+    display: block;
+    background-color: $primaryCol;
+    /* opacity: 0; */
+    width: 100%;
+    height: 200%;
+    overflow: hidden;
+    /* background-color: rgba(255, 255, 255, 1); */
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 200;
+    transform: translate3d(100%, 0, 0);
+    transition: all 1s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.overlay-nav--quick-nav.quick-nav--is-open {
+    display: block;
+    /* opacity: 1; */
+    transform: translate3d(0, 0, 0);
+}
+
+.quickNavBtn:hover {
+    cursor: pointer;
 }
