--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -48,7 +48,6 @@
 }
 
 .overlay-nav {
-    /* opacity: 0; */
     width: 100%;
     height: 200%;
     overflow: hidden;
@@ -59,9 +58,9 @@
     z-index: 150;
     transform: translate3d(-100%, 0, 0);
     transition: all 1s cubic-bezier(0.23, 1, 0.32, 1);
-    /* backface-visibility: hidden; */
+
     @mixin atMedium {
-        display: none;
+        display: none;  
     }
 
     &--is-open {
@@ -306,28 +305,23 @@
 
 
 
-    /* Quick Nav Variation */
+/* Quick Nav Variation */
 
-
-.overlay-nav--quick-nav {
+.overlay-quick-nav {
     display: block;
     background-color: $primaryCol;
-    /* opacity: 0; */
-    width: 100%;
+    width: 50%;
     height: 200%;
     overflow: hidden;
-    /* background-color: rgba(255, 255, 255, 1); */
     position: fixed;
     top: 0;
-    left: 0;
-    z-index: 200;
+    right: 0;
+    z-index: 100;
     transform: translate3d(100%, 0, 0);
     transition: all 1s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-.overlay-nav--quick-nav.quick-nav--is-open {
-    display: block;
-    /* opacity: 1; */
+.overlay-quick-nav.quick-nav--is-open {
     transform: translate3d(0, 0, 0);
 }
 
