--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -235,9 +235,21 @@
 			transform: rotate(45deg) scaleX(1.2) translateX(0px) translateY(-2px);
             background-color: #080808;
         }
+
 		&::after {
 			transform: rotate(-45deg) scaleX(1.2) translateX(-4px) translateY(4px);
             background-color: #080808;
+        }
+
+        &--light {
+            opacity: 1;
+            &::before {
+                background-color: #fff;
+            }
+
+            &::after {
+                background-color: #fff;
+            }
         }
 
         &--is-on{
@@ -310,15 +322,18 @@
 .overlay-quick-nav {
     display: block;
     background-color: $primaryCol;
-    width: 50%;
+    width: 80%;
     height: 200%;
     overflow: hidden;
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 100;
+    z-index: 200;
     transform: translate3d(100%, 0, 0);
     transition: all 1s cubic-bezier(0.23, 1, 0.32, 1);
+    @mixin atSmall {
+        width: 50%;
+    }
 }
 
 .overlay-quick-nav.quick-nav--is-open {
@@ -327,4 +342,78 @@
 
 .quickNavBtn:hover {
     cursor: pointer;
+}
+
+.overlay-scrim {
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    z-index: 160;
+    top: 0;
+    left: 0;
+    transition: all .3s ease-out;
+
+    &.scrim-on {
+        opacity: .8;
+        visibility: visible;
+    }
+}
+
+.quick-nav {
+    &__content {
+        height: 100vh;
+        overflow: scroll;
+        padding: 40px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    &__heading {
+        font-size: 22px;
+        color: #fff;
+        margin-bottom: 100px;
+    }
+
+    &__sub {
+        font-size: 14px;
+        color: rgba(255, 255, 255, 0.8);
+        letter-spacing: 1px;
+        margin-left: 10px;
+    }
+
+    &__list {
+        color: #fff;
+    }
+
+    &__category {
+        border-top: 1px solid rgba(255, 255, 255, 0.2);
+        padding: 14px 0;
+        &-title {
+            color: rgba(255, 255, 255, 0.7);
+            text-transform: uppercase;
+            font-size: 14px;
+            letter-spacing: 1px;
+        }
+
+        &-list {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
+    }
+
+    &__category-list-item {
+
+    }
+
+    &__category-list-link {
+        display: block;
+        color: #fff;
+        /* border: 1px solid plum; */
+        padding: 10px;
+    }
 }
