--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -277,6 +277,10 @@
     letter-spacing: 1px;
     border-top: 1px solid #F0EEEE;
     /* border-bottom: 1px solid #F0EEEE; */
+    font-size: 14px;
+    /* @mixin atSmall {
+        font-size: 16px;
+    } */
 
     &-container {
         max-width: 1024px;
@@ -376,14 +380,20 @@
         font-size: 22px;
         color: #fff;
         margin-bottom: 100px;
+        @mixin atSmall {
+            font-size: 40px;
+            font-weight: 300;
+        }
     }
 
     &__sub {
+        display: block;
         font-size: 14px;
         color: rgba(255, 255, 255, 0.8);
         letter-spacing: 1px;
-        margin-left: 10px;
+        margin-top: 10px;
     }
+
 
     &__list {
         color: #fff;
@@ -393,10 +403,13 @@
         border-top: 1px solid rgba(255, 255, 255, 0.2);
         padding: 14px 0;
         &-title {
-            color: rgba(255, 255, 255, 0.7);
+            color: rgba(255, 255, 255, 1);
             text-transform: uppercase;
             font-size: 14px;
             letter-spacing: 1px;
+            &-sub {
+                color: $primaryCol-lighter;
+            }
         }
 
         &-list {
@@ -404,7 +417,25 @@
             flex-direction: column;
             align-items: flex-end;
         }
+            &:last-child {
+                margin-bottom: 100px;
+                @mixin atSmall {
+                    margin-bottom: 0;
+                }
+            }
     }
+    
+    &__desc {
+        line-height: 1.6;
+        margin-top: 20px;
+        letter-spacing: .5px;
+        font-size: 14px;
+        color: rgba(255, 255, 255, 0.8);
+        @mixin atSmall {
+            font-size: 16px;
+        }
+    }
+
 
     &__category-list-item {
 
