--- a/app/assets/styles/modules/_temp.css
+++ b/app/assets/styles/modules/_temp.css
@@ -28,3 +28,69 @@
         <!-- <li class="bullet-list__item">Information Architecture Improvement</li> -->
     </ul>
 </div> */
+
+
+
+
+/* 
+ <ul class="quick-nav__list">
+    <li class="quick-nav__category">
+        <h4 class="quick-nav__category-title">Mobile app</h4>
+        <ul class="quick-nav__category-list">
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Ma-in</a>
+            </li>
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Shinhan Bank 'SoL'</a>
+            </li>
+        </ul>
+    </li>
+    <li class="quick-nav__category">
+        <h4 class="quick-nav__category-title">Web site</h4>
+        <ul class="quick-nav__category-list">
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">YG entertainment</a>
+            </li>
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Portfolio ver.1</a>
+            </li>
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Portfolio ver.2</a>
+            </li>
+        </ul>
+    </li>
+    <li class="quick-nav__category">
+        <h4 class="quick-nav__category-title">Promotion & Branding</h4>
+        <ul class="quick-nav__category-list">
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Superfan English</a>
+            </li>
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Winter Festival</a>
+            </li>
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Ganghwa Tour Promotion</a>
+            </li>
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Wanna Drink</a>
+            </li>
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Komerican3</a>
+            </li>
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Dessert 129</a>
+            </li>
+        </ul>
+    </li>
+    <li class="quick-nav__category">
+        <h4 class="quick-nav__category-title">Graphic Works</h4>
+        <ul class="quick-nav__category-list">
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Art works</a>
+            </li>
+            <li class="quick-nav__category-list-item">
+                <a href="#" class="quick-nav__category-list-link">Techique Exercises</a>
+            </li>
+        </ul>
+    </li>
+</ul> */
