--- a/app/assets/styles/modules/_card.css
+++ b/app/assets/styles/modules/_card.css
@@ -71,15 +71,18 @@
         font-weight: 400;
         font-size: 22px;
         color: #080808;
+        line-height: 1.3;
         /* background-color: $primaryCol; */
         &--main {
             display: inline; 
             font-weight: 400; 
             margin-right: 10px; 
+            font-size: 22px;
+            color: $primaryCol-point;
         }
         &--sub {
             display: inline;
-            /* color: $grey-font; */
+            color: #333;
         }
     }
 
