--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -210,7 +210,7 @@ video {
         &--main {
             margin-top: 20px;
             font-size: 50px;
-            letter-spacing: .5px;
+            letter-spacing: -.7px;
             font-weight: 700;
             color: $primaryCol;
             width: 340px;
